EPMRPP-34334. Grid. Sticky header. Fix overlaps

--- a/app/src/components/main/grid/gridHeader/headerCell/headerCell.scss
+++ b/app/src/components/main/grid/gridHeader/headerCell/headerCell.scss
@@ -1,7 +1,7 @@
 .header-cell {
   position: sticky;
   top: 0;
-  z-index: $Z_INDEX-STICKY-TOOLBAR;
+  z-index: $Z_INDEX-GRID_HEADER;
   display: table-cell;
   color: $COLOR--gray-47;
   background-color: $COLOR--white;
